[package]
name = "Lodestone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
minreq = { version = "2.4.2", features = ["punycode","https-rustls-probe"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"